--- a/services/self-service/src/main/resources/webapp/src/app/shared/modal-dialog/modal.component.css
+++ b/services/self-service/src/main/resources/webapp/src/app/shared/modal-dialog/modal.component.css
@@ -158,7 +158,7 @@ limitations under the License.
   font-size: 24px;
   border: 0;
   background: none;
-  color: #cbcbcb;
+  color: #2d3b40;
   outline: none;
   cursor: pointer;
   transition: all .45s ease-in-out;
